# visbrain

./: .gitattributes  .travis.yml  AGENTS.md  MANIFEST.in  Makefile  README.rst  appveyor.yml  circle.yml  conftest.py  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
docs/: api.rst  brain.rst  conf.py  development.rst  example_to_thumbnails.py  figure.rst  index.rst  introduction.rst  sleep.rst
docs/modernization/: phase-0.rst  phase-1.rst  phase-2.rst  phase-3-inventory.rst  phase-3.rst
examples/: README.txt
examples/objects/: plot_roi_object.py  plot_topo_obj.py
requirements/: base.txt  dev.txt
tools/: generate_qt_ui.py
visbrain/: __init__.py  _pyqt_module.py  config.py  data_url.json  qt.py
visbrain/data/: __init__.py  _package_data.py
visbrain/data/example_data/: Hypnogram_description_template.txt  Hypnogram_excerpt2.txt  Sleep_annotations_template.csv  Sleep_annotations_template.txt
visbrain/gui/: __init__.py  _accessibility.py  theme.py
visbrain/gui/brain/: brain.py  visuals.py
visbrain/gui/brain/interface/: ui_init.py
visbrain/gui/brain/interface/gui/: brain_gui.py  brain_gui.ui
visbrain/gui/brain/interface/ui_elements/: ui_atlas.py  ui_menu.py  ui_screenshot.py  ui_sources.py
visbrain/gui/brain/tests/: test_brain.py
visbrain/gui/figure/: __init__.py  figure.py
visbrain/gui/figure/interface/: __init__.py  figure_gui.py  figure_gui.ui
visbrain/gui/figure/tests/: test_figure.py
visbrain/gui/signal/: signal.py
visbrain/gui/signal/gui/: __init__.py  signal_gui.py
visbrain/gui/signal/interface/: __init__.py
visbrain/gui/signal/interface/gui/: __init__.py  signal_gui.py  signal_gui.ui
visbrain/gui/signal/tests/: test_signal.py
visbrain/gui/signal/ui_elements/: ui_annotations.py  ui_init.py  ui_menu.py
visbrain/gui/sleep/: __init__.py  controller.py  loader.py  model.py  sleep.py  view.py
visbrain/gui/sleep/interface/: ui_init.py
visbrain/gui/sleep/interface/gui/: sleep_gui.py  sleep_gui.ui
visbrain/gui/sleep/interface/ui_elements/: ui_annotate.py  ui_detection.py  ui_info.py  ui_menu.py  ui_panels.py  ui_scoring.py  ui_screenshot.py  ui_settings.py  ui_tools.py
visbrain/gui/sleep/tests/: conftest.py  test_controller.py  test_model.py  test_sleep.py
visbrain/gui/sleep/visuals/: visuals.py
visbrain/gui/tests/: _screenshot.py  test_accessibility.py  test_pyqt_module.py  test_regressions.py  test_theme.py
visbrain/io/: dependencies.py  dialog.py  download.py  mneio.py  path.py  read_data.py  read_sleep.py  rw_hypno.py  rw_nifti.py  write_image.py  write_template.py
visbrain/io/tests/: test_dependancies.py  test_download.py  test_mneio.py  test_path.py  test_read_data.py  test_read_sleep_bids.py  test_write_image.py
visbrain/objects/: brain_obj.py  image_obj.py  roi_obj.py  scene_obj.py  topo_obj.py  visbrain_obj.py  volume_obj.py
visbrain/objects/tests/: test_crossec_obj.py  test_roi_obj.py  test_volume_obj.py
visbrain/resources/: __init__.py  icons.py
visbrain/resources/icons/: __init__.py
visbrain/tests/: _tests_visbrain.py  test_config.py  test_config_apps.py  test_config_cli.py  test_gui_lifecycle.py  test_icons.py  test_imports.py  test_opengl_diagnostics.py
visbrain/utils/: guitools.py
visbrain/utils/gui/: popup.py  screenshot_gui.py  screenshot_gui.ui
visbrain/utils/gui/tests/: test_popup.py
visbrain/utils/tests/: test_guitools.py
visbrain/visuals/: __init__.py  context.py  topo_visual.py
visbrain/visuals/cbar/gui/: CbarPyQtGui.py  CbarPyQtGui.ui  __init__.py
