[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "visbrain"
dynamic = ["version"]
description = "Hardware-accelerated visualization suite for brain-data in Python"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Visbrain developers" },
]
maintainers = [
    { name = "Etienne Combrisson", email = "e.combrisson@gmail.com" },
]
keywords = [
    "brain",
    "MNI",
    "GPU",
    "visualization",
    "OpenGL",
    "vispy",
    "neuroscience",
    "sleep",
    "data-mining",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.11.4",
    "vispy>=0.13.0",
    "matplotlib>=3.8.4",
    "PySide6>=6.7.1",
    "shiboken6>=6.7.1",
    "pillow>=10.3.0",
    "PyOpenGL>=3.1.7",
]

[project.optional-dependencies]
full = [
    "mne>=1.6.1",
    "tensorpac>=0.6.5",
    "pandas>=2.2.2",
    "xlrd>=2.0.1",
    "scikit-image>=0.22.0",
    "nibabel>=5.2.1",
    "imageio>=2.34.1",
]
sleep = [
    "mne>=1.6.1",
    "tensorpac>=0.6.5",
]
roi = [
    "pandas>=2.2.2",
    "xlrd>=2.0.1",
]
topo = [
    "scikit-image>=0.22.0",
]

[project.urls]
Homepage = "https://visbrain.org"
Documentation = "https://visbrain.org"
Repository = "https://github.com/EtienneCmb/visbrain"
"Issue Tracker" = "https://github.com/EtienneCmb/visbrain/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["visbrain", "visbrain.*"]

[tool.setuptools.package-data]
visbrain = [
    "data_url.json",
    "resources/icons/*.svg",
    "data/**/*.txt",
    "data/**/*.npy",
    "data/**/*.npz",
]

[tool.setuptools.dynamic]
version = {attr = "visbrain.__version__"}

[tool.ruff]
target-version = "py39"
extend-exclude = [
    "docs",
    "old",
    "build",
    "dist",
    "__init__.py",
    "examples",
    "*_gui.py",
    "*Gui.py",
    "setup.py",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E722", "E741", "F632"]
